--- a/index.html
+++ b/index.html
@@ -138,19 +138,23 @@
     </div>
     <div class="contact pt-5" id="contact">
         <div class="special-heading  ">
-            <h1>Contact</h1>
+            <h1>Contact me</h1>
             <p> Get in touch</p>
         </div>
         <div class="container ">
             <div class="row   text-center mt-5 pb-5">
-                <div class="col-12 col-sm-6 col-lg-3 mb-3 d-flex justify-content-center align-items-center "><i class="fa-brands fa-facebook me-2"></i><a
-                        href="https://www.facebook.com/saad.esam.90/" target="_blank"> facebook </a></div>
-                <div class="col-12 col-sm-6 col-lg-3 mb-3 d-flex justify-content-center align-items-center "><i class="fa-brands fa-whatsapp me-2"></i><a
-                        href=" https://wa.me/201068230480" target="_blank"> +201068230480</a></div>
-                <div class="col-12 col-sm-6 col-lg-3 mb-3 d-flex justify-content-center align-items-center "><i class="fa-brands fa-linkedin me-2"></i><a
-                        href="https://www.linkedin.com/in/saad-elnady/" target="_blank"> linkedin</a></div>
-                <div class="col-12 col-sm-6 col-lg-3 mb-3 d-flex justify-content-center align-items-center "><i class="fa-brands fa-github me-2"></i><a
-                        href="https://github.com/saadelnady" target="_blank"> Github</a></div>
+                <div class="col-12 col-sm-6 col-lg-3 mb-3 d-flex justify-content-center align-items-center "><i
+                        class="fa-brands fa-facebook me-2"></i><a href="https://www.facebook.com/saad.esam.90/"
+                        target="_blank"> facebook </a></div>
+                <div class="col-12 col-sm-6 col-lg-3 mb-3 d-flex justify-content-center align-items-center "><i
+                        class="fa-brands fa-whatsapp me-2"></i><a href=" https://wa.me/201068230480" target="_blank">
+                        +201068230480</a></div>
+                <div class="col-12 col-sm-6 col-lg-3 mb-3 d-flex justify-content-center align-items-center "><i
+                        class="fa-brands fa-linkedin me-2"></i><a href="https://www.linkedin.com/in/saad-elnady/"
+                        target="_blank"> linkedin</a></div>
+                <div class="col-12 col-sm-6 col-lg-3 mb-3 d-flex justify-content-center align-items-center "><i
+                        class="fa-brands fa-github me-2"></i><a href="https://github.com/saadelnady" target="_blank">
+                        Github</a></div>
             </div>
         </div>
     </div>
