delete me in Contact me

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </div>
     <div class="contact pt-5" id="contact">
         <div class="special-heading  ">
-            <h1>Contact me</h1>
+            <h1>Contact  </h1>
             <p> Get in touch</p>
         </div>
         <div class="container ">
